--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(modules/01-architecture)
 add_subdirectory(modules/02-basics)
 add_subdirectory(modules/03-memory)
 add_subdirectory(modules/04-performance)
+add_subdirectory(modules/06-advanced)
 
 # Размещаем все исполняемые файлы прямо в корневой директории сборки
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
@@ -19,4 +20,5 @@ add_test(NAME hello_gpu COMMAND hello_gpu)
 add_test(NAME memory_access COMMAND memory_access)
 add_test(NAME vector_add COMMAND vector_add)
 add_test(NAME matmul_naive COMMAND matmul_naive)
-add_test(NAME matmul_tiled COMMAND matmul_tiled) 
+add_test(NAME matmul_tiled COMMAND matmul_tiled)
+add_test(NAME graph_vector_add COMMAND graph_vector_add) 
