--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(modules/02-basics)
 add_subdirectory(modules/03-memory)
 add_subdirectory(modules/04-performance)
 add_subdirectory(modules/06-advanced)
+add_subdirectory(modules/07-libraries)
 
 # Размещаем все исполняемые файлы прямо в корневой директории сборки
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
@@ -21,4 +22,5 @@ add_test(NAME memory_access COMMAND memory_access)
 add_test(NAME vector_add COMMAND vector_add)
 add_test(NAME matmul_naive COMMAND matmul_naive)
 add_test(NAME matmul_tiled COMMAND matmul_tiled)
-add_test(NAME graph_vector_add COMMAND graph_vector_add) 
+add_test(NAME graph_vector_add COMMAND graph_vector_add)
+add_test(NAME gemm_cublas COMMAND gemm_cublas) 
