--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(modules/04-performance)
 add_subdirectory(modules/06-advanced)
 add_subdirectory(modules/07-libraries)
 add_subdirectory(modules/08-profiling)
+add_subdirectory(modules/09-opencl)
 
 # Включаем тесты, чтобы примеры можно было запускать через `ctest`
 enable_testing()
@@ -24,4 +25,5 @@ add_test(NAME vector_add COMMAND vector_add)
 add_test(NAME matmul_naive COMMAND matmul_naive)
 add_test(NAME matmul_tiled COMMAND matmul_tiled)
 add_test(NAME graph_vector_add COMMAND graph_vector_add)
-add_test(NAME gemm_cublas COMMAND gemm_cublas) 
+add_test(NAME gemm_cublas COMMAND gemm_cublas)
+add_test(NAME saxpy_cl COMMAND saxpy_cl) 
