--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,10 @@ project(gpu_school LANGUAGES C CXX CUDA)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
 # Добавляем модули курса
-add_subdirectory(modules/00-intro)
-add_subdirectory(modules/01-architecture)
-add_subdirectory(modules/02-basics)
-add_subdirectory(modules/03-memory)
-add_subdirectory(modules/04-performance)
-add_subdirectory(modules/06-advanced)
-add_subdirectory(modules/07-libraries)
-add_subdirectory(modules/08-profiling)
+add_subdirectory(modules/cuda)
 add_subdirectory(modules/09-opencl)
+add_subdirectory(modules/opencl/00-intro)
+add_subdirectory(modules/opencl/02-basics)
 
 # Включаем тесты, чтобы примеры можно было запускать через `ctest`
 enable_testing()
@@ -26,4 +21,6 @@ add_test(NAME matmul_naive COMMAND matmul_naive)
 add_test(NAME matmul_tiled COMMAND matmul_tiled)
 add_test(NAME graph_vector_add COMMAND graph_vector_add)
 add_test(NAME gemm_cublas COMMAND gemm_cublas)
-add_test(NAME saxpy_cl COMMAND saxpy_cl) 
+add_test(NAME saxpy_cl COMMAND saxpy_cl)
+add_test(NAME hello_opencl COMMAND hello_opencl)
+add_test(NAME saxpy_basic_cl COMMAND saxpy_basic_cl) 
