--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(modules/opencl/02-basics)
 add_subdirectory(modules/opencl/03-memory)
 add_subdirectory(modules/opencl/04-performance)
 add_subdirectory(modules/opencl/05-streams)
+add_subdirectory(modules/opencl/06-advanced)
 
 # Включаем тесты, чтобы примеры можно было запускать через `ctest`
 enable_testing()
@@ -27,4 +28,5 @@ add_test(NAME hello_opencl COMMAND hello_opencl)
 add_test(NAME saxpy_basic_cl COMMAND saxpy_basic_cl)
 add_test(NAME matmul_naive_cl COMMAND matmul_naive_cl 128)
 add_test(NAME matmul_tiled_cl COMMAND matmul_tiled_cl 256)
-add_test(NAME stream_overlap_cl COMMAND stream_overlap_cl 32) 
+add_test(NAME stream_overlap_cl COMMAND stream_overlap_cl 32)
+add_test(NAME reduction_atomic_cl COMMAND reduction_atomic_cl 1048576) 
