--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(modules/opencl/03-memory)
 add_subdirectory(modules/opencl/04-performance)
 add_subdirectory(modules/opencl/05-streams)
 add_subdirectory(modules/opencl/06-advanced)
+add_subdirectory(modules/opencl/07-libraries)
 
 # Включаем тесты, чтобы примеры можно было запускать через `ctest`
 enable_testing()
@@ -29,4 +30,7 @@ add_test(NAME saxpy_basic_cl COMMAND saxpy_basic_cl)
 add_test(NAME matmul_naive_cl COMMAND matmul_naive_cl 128)
 add_test(NAME matmul_tiled_cl COMMAND matmul_tiled_cl 256)
 add_test(NAME stream_overlap_cl COMMAND stream_overlap_cl 32)
-add_test(NAME reduction_atomic_cl COMMAND reduction_atomic_cl 1048576) 
+add_test(NAME reduction_atomic_cl COMMAND reduction_atomic_cl 1048576)
+if(TARGET gemm_clblast)
+  add_test(NAME gemm_clblast COMMAND gemm_clblast 512)
+endif() 
